// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile m huge 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 60,
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 5,
          "marginTop": 30,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 16,
          "lineHeight": 19,
          "paddingBottom": 5,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m medium 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 30,
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 5,
          "marginTop": 30,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 16,
          "lineHeight": 19,
          "paddingBottom": 5,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m small 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 10,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m wide 1`] = `
<Link
  linkStyle={
    Object {
      "paddingBottom": 60,
    }
  }
  url="/article/123"
>
  <View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 5,
          "marginTop": 30,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 16,
          "lineHeight": 19,
          "paddingBottom": 5,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tile m without breakpoint should be like small 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 10,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;
